--- a/etc/ergo.conf
+++ b/etc/ergo.conf
@@ -3,15 +3,10 @@
 
 
 general:
-    log_level:    "info"
-    log_filename: ~
+    include: "ergo.d"
     
-    smtp_host:     "smtp.example.com"
-    smtp_port:     25
-    smtp_username: ""
-    smtp_password: ""
-    smtp_from:     "ergo@example.com"
-    smtp_to:       "admin@example.com"
+    log_level: "info"
+    log_filename: ~
 
 ao:
     dimensions:
@@ -25,7 +20,7 @@ ao:
           name: "Rimor"
     
     accounts:
-        - username:  ""
-          password:  ""
+        - username: "ergo"
+          password: ""
           dimension: *rk1
-          character: ""
+          character: "Ergo"
