--- a/etc/ergo.conf
+++ b/etc/ergo.conf
@@ -3,10 +3,14 @@
 
 
 general:
-    include: "ergo.d"
+    include:        "ergo.d"
     
-    log_level:    "info"
-    log_filename: ~
+    log_level:      "info"
+    log_filename:   ~
+
+chat:
+    prefix_private: ""
+    prefix_group:   "#"
 
 ao:
     dimensions:
