--- a/etc/ergo.conf
+++ b/etc/ergo.conf
@@ -7,10 +7,18 @@ general:
     
     log_level:      "info"
     log_filename:   ~
+    
+    smtp_host:      "smtp.example.com"
+    smtp_port:      25
+    smtp_username:  "ergo@example.com"
+    smtp_password:  ""
+    smtp_from:      "ergo@example.com"
+    smtp_to:        "admin@example.com"
 
 chat:
     prefix_private: ""
     prefix_group:   "#"
+    prefix_clan:    "#"
 
 ao:
     dimensions:
